test/test_suite/errors/top_level_decl_typos.c3
module foo;

struct Foo
{
	int bar;
}

ptr p; // #error: This is not a valid top level declaration. Did you perhaps want 'iptr' or 'uptr'?
